@@ -4,6 +4,7 @@ CHANGELOG RoundCube Webmail
 2009/02/13 (alec)
 ----------
 - Fix multiple recipients input parsing (#1485733)
+- Fix replying to message with html attachment (#1485676)
 
 2009/02/10 (alec)
 ----------
